--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -3,12 +3,13 @@
 {% block title %} Acceuil{% endblock %}
 
 {% block body %}
-    <div class="container mt-4">
+    <div class="container mt-4 ">
         <div class="jumbotron">
             <h1 class="display-4">Bienvenue</h1>
             <p class="lead">Ceci est un exemple d'application web</p>
             <hr class="my-4">
-            <p>Pour pouvoir utiliser l'application vous devez vous inscrire</p>
+            <p>Pour pouvoir utiliser l'application vous devez vous inscrire, si vous avez déjà un compte cliquez sur le bouton connexion</p>
+            <a class="btn btn-primary btn-lg" href="#" role="button">Connexion</a>
             <a class="btn btn-primary btn-lg" href="#" role="button">Inscription</a>
         </div>
     </div>
