--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,8 +7,8 @@
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.2.3/cosmo/bootstrap.min.css" integrity="sha512-+2pK6sY7HGKqE1wIrLFPSs7K02s9r1hiSMzspP3kPGvTZQ+gIEcesvd8hhZ1nBet2FEBauCADTlIsH5k6MIQ6g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.2.3/dist/cosmo/_variables.scss">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.2.3/dist/united/bootstrap.min.css">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.2.3/dist/united/_variables.scss">
         {% endblock %}
 
         {% block javascripts %}
