--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -7,34 +7,10 @@
         <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Home
-                        <span class="visually-hidden">(current)</span>
+                    <a class="nav-link" href="{{ path('ingredient.index') }}">Accueil
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Separated link</a>
-                    </div>
-                </li>
             </ul>
-            <form class="d-flex" data-dashlane-rid="b6ada0c8c7a8fea0" data-form-type="">
-                <input class="form-control me-sm-2" type="search" placeholder="Search" data-dashlane-rid="74411b8a3122445b" data-form-type="">
-                <button class="btn btn-secondary my-2 my-sm-0" type="submit" data-dashlane-label="true" data-dashlane-rid="eab05fb641040c02" data-form-type="">Search</button>
-            </form>
         </div>
     </div>
 </nav>
