--- a/templates/pages/recipe/index.html.twig
+++ b/templates/pages/recipe/index.html.twig
@@ -5,21 +5,13 @@
 {% block body %}
     <div class="container mt-4">
         {% if not recipes.items is same as ([]) %}
-            <h1>Mes Recettes</h1>
             {% for message in app.flashes('success') %}
-                <div class="alert alert-success mt-4">
-                    {{ message }}
+                <div class="text-center alert alert-dismissible  alert-success mt-4">
+                    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                    <strong>{{ message }}</strong>
                 </div>
             {% endfor %}
-            <div class="count">
-                <h4>
-                    Il y a
-                    {{ recipes.getTotalItemCount }}
-                    recettes
-                </h4>
-            </div>
-
-            <a href="{{ path('recipe.new') }}" class="btn btn-success ">Ajouter une recette</a>
+            <h1 class="text-center mb-4">Mes Recettes({{ recipes | length }})</h1>
             <table class="table table-hover mt-4">
                 <thead>
                 <tr>
@@ -27,7 +19,7 @@
                     <th scope="col">Nom</th>
                     <th scope="col">Prix</th>
                     <th scope="col">Difficulté</th>
-                    <th scope="col">Date de création</th>
+                    <th scope="col">Date d'ajout'</th>
                     <th scope="col">Action</th>
                 </tr>
                 </thead>
@@ -47,11 +39,23 @@
                 {% endfor %}
                 </tbody>
             </table>
+            <div class="text-center">
+                <a href="{{ path('recipe.new') }}" class="btn btn-success ">Ajouter une recette</a>
+            </div>
             <div class="navigation d-flex justify-content-center mt-4">
                 {{ knp_pagination_render(recipes) }}
             </div>
         {% else %}
-            <h4>Il n'y a pas de recette</h4>
+            {% for message in app.flashes('success') %}
+                <div class="text-center alert alert-dismissible  alert-success mt-4">
+                    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                    <strong>{{ message }}</strong>
+                </div>
+            {% endfor %}
+            <h4 class="text-center">Vous n'avez pas de recette</h4>
+            <div class="text-center">
+                <a href="{{ path('recipe.new') }}" class="btn btn-success ">Ajouter une recette</a>
+            </div>
         {% endif %}
     </div>
 {% endblock %}
