--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -5,43 +5,97 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarColor02">
-
-            <ul class="navbar-nav me-auto">
-                {% if currentUser is not null %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('ingredient.index') }}">
-                            Ingrédients
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('recipe.index') }}">
-                            Recettes
-                        </a>
-                    </li>
-                {% endif %}
-            </ul>
-
-            <ul class="navbar-nav">
-                {% if currentUser is not null %}
-
-                    {% if currentUser.roles is same as (["ROLE_ADMIN","ROLE_USER"]) %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('admin') }}">
-                                Admin Dashboard
+            {% if currentUser is not null %}
+                <div class="dropdown ms-1">
+                    <a class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" href="" id="dropdown1" data-bs-toggle="dropdown">
+                        <span>Ingrédient</span>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="dropdown1">
+                        <li>
+                            <a href="{{ path('ingredient.new') }}" class="dropdown-item">
+                                <i class="bi bi-plus"></i>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+                                    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                                </svg>
+                                <span>Ajouter</span>
                             </a>
                         </li>
-                    {% endif %}
-                    <li class="nav-item">
-                    <a class="nav-link" href="{{ path('security.logout') }}">
-                        Profile
+                        <li>
+                            <a href="{{ path('ingredient.index') }}" class="dropdown-item">
+                                <i class="bi bi-eye"></i>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+                                    <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
+                                    <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
+                                </svg>
+                                <span>Voir</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="dropdown ms-3">
+                    <a class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" href="" id="dropdown2" data-bs-toggle="dropdown">
+                        <span>Recette</span>
                     </a>
-                </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('security.logout') }}">
-                            Deconnexion
-                        </a>
-                    </li>
-                {% else %}
+                    <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="dropdown2">
+                        <li>
+                            <a href="{{ path('recipe.new') }}" class="dropdown-item">
+                                <i class="bi bi-plus"></i>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+                                    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                                </svg>
+                                <span>Ajouter</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{{ path('recipe.index') }}" class="dropdown-item">
+                                <i class="bi bi-eye"></i>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+                                    <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
+                                    <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
+                                </svg>
+                                <span>Voir</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            {% endif %}
+            {% if currentUser is not null %}
+                <div class="dropdown ms-auto">
+                    <a class="d-flex align-items-center text-decoration-none text-white dropdown-toggle" href="#" role="button" id="dropdown2" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="bi bi-person-circle"></i>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+                        </svg>
+                        <span class="d-none d-sm-inline mx-1">{{ currentUser.email }}</span>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdown2">
+                        {% if currentUser.roles is same as (["ROLE_ADMIN","ROLE_USER"]) %}
+                            <li>
+                                <a class="dropdown-item" href="{{ path('admin') }}">
+                                    Administation
+                                </a>
+                            </li>
+                        {% endif %}
+                        <li>
+                            <a class="dropdown-item" href="{{ path('user.index') }}">
+                                Mon profil
+                            </a>
+                        </li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="{{ path('security.logout') }}">
+                                Déconnexion
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+            {% else %}
+                <ul class="navbar-nav ms-auto">
+
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('security.login') }}">
                             Connexion
@@ -52,8 +106,9 @@
                             Inscription
                         </a>
                     </li>
-                {% endif %}
-            </ul>
+
+                </ul>
+            {% endif %}
         </div>
     </div>
 </nav>
