--- a/templates/pages/user/index.html.twig
+++ b/templates/pages/user/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Profil de {{ currentUser.nom | upper }} {{ currentUser.prenom | capitalize}}
+{% block title %}Profil de {{ user.nom | upper }} {{ user.prenom | capitalize}}
 {% endblock %}
 
 
@@ -13,13 +13,12 @@
     {% endfor %}
     <div class="container mt-4">
         <div class="row mt-xxl-5">
-            <div class="col-2 text-center">
-                <img src="{{ asset('build/img/Jinx_Arcane_6_Render.jpg') }}" height="150px" width="150px" class="rounded-circle">
-                <h4>@{{ currentUser.username }}</h4>
-                <a class="btn btn-info" href="{{ path('user.edit', { id: currentUser.id }) }}">Modifier</a>
-                <a class="btn btn-danger" href="" data-bs-toggle="modal" data-bs-target="#modal">Supprimer</a>
-                <p class="mt-3">Membre depuis:</p>
-                <p>{{ currentUser.createdAt | ago(locale='fr') }}</p>
+            <div class="col-3 text-center">
+                <img src="{{ asset('assets/img/5f4d8799ab533266d63839384dd236b4.jpg') }}" height="150px" width="150px" class="rounded-circle">
+                <h4>@{{ user.username }}</h4>
+                {% set difference = date(user.createdAt, 'Europe/Paris').diff(date('now', 'Europe/Paris')) %}
+                <p  class="mt-3">Membre depuis:</p>
+                <p>{{ difference | date('%y An(s), %m Mois et %d Jour(s)') }}</p>
             </div>
             <div class="col-1">
                 <div class="vr" style="height: 100%"></div>
@@ -27,22 +26,82 @@
             <div class="col-8">
                 <div class="d-flex justify-content-around">
                     <div>
-                        <p>Nom: {{ currentUser.nom | upper }}</p>
-                        <p class="mt-3">Pseudo: {{ currentUser.username | upper }}</p>
+                        <p>Nom: {{ user.nom | upper }}</p>
+                        <p class="mt-3">Prénom: {{ user.prenom | capitalize }}</p>
+
                     </div>
 
                     <div class="vr"></div>
                     <div>
-                        <p>Prénom: {{ currentUser.prenom | capitalize }}</p>
-                        <p class="mt-3">Email: {{ currentUser.email }}</p>
+                        <p >Pseudo: {{ user.username }}</p>
+                        <p class="mt-3">Email: {{ user.email }}</p>
                     </div>
 
                 </div>
                 <hr>
+                {% if user.bio is not null %}
                 <div>
-                    <p class="text-center">Biograpgie:</p>
-                    <p>{{ currentUser.bio }}</p>
+                    <p class="text-center">Biographie:</p>
+                    <p>{{ user.bio }}</p>
                 </div>
+                {% endif %}
+                {% if currentUser is same as (user) %}
+                <dv class="d-flex justify-content-center">
+                    <a class="btn btn-info mt-3 mx-2" href="{{ path('user.edit') }}">Modifier le profil</a>
+                    <a class="btn btn-info mt-3 mx-2" href="{{ path('user.edit.pass') }}">Modifier mdp</a>
+                </dv>
+                {% endif %}
+                <div class="mt-4">
+
+                    <h3>Ajouter un commentaire :</h3>
+                    {% for message in app.flashes('commentSucc') %}
+                        <div class="text-center alert alert-dismissible  alert-success mt-4">
+                            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                            <strong>{{ message }}</strong>
+                        </div>
+                    {% endfor %}
+                    {% for message in app.flashes('commentErr') %}
+                        <div class="text-center alert alert-dismissible  alert-success mt-4">
+                            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                            <strong>{{ message }}</strong>
+                        </div>
+                    {% endfor %}
+                    <form class="form d-flex" method="post" action="{{ path('app_comments', {id: user.id}) }}">
+                        <textarea class="form-control" name="content" id="content" placeholder="Commentaire ici ........" rows="3"></textarea>
+                        <input type="submit" class="btn btn-success" value="Envoyer">
+                    </form>
+                    {% if comments is not null %}
+                        <div class="card">
+                            <div class="card-header text-center">
+                                Commentaires({{ comments | length }})
+                            </div>
+                            {% for comment in comments %}
+                                <div class="card-body">
+                                    <blockquote class="blockquote mb-0">
+                                        <div class="d-flex justify-content-between">
+                                            <a class="text-decoration-none text-black" href="{{ path('user.index', {id: comment.autor.id}) }}">{{ comment.autor.username }}</a><p>: {{ comment.content }}</p>
+                                            {% if (currentUser is same as (comment.user)) or (currentUser is same as (comment.autor))%}
+                                                <form method="post" action="{{ path('app_comments_delete', {id : comment.id}) }}">
+                                                    <input hidden="hidden" value="{{ user.id }}" name="userId" id="userId" type="text">
+                                                    <button type="submit" class="btn btn-outline-danger" style="height: 30px">Suppprimer</button>
+                                                </form>
+                                            {% endif %}
+                                        </div>
+
+                                        <footer class="blockquote-footer">{{ comment.createdAt | ago(locale='fr') }}</footer>
+                                    </blockquote>
+                                </div>
+                            {% endfor %}
+                            {{ knp_pagination_render(comments) }}
+                        </div>
+                    {% endif %}
+                </div>
+                <hr>
+                {% if currentUser is same as (user) %}
+                <div class="text-center">
+                    <a class="btn btn-danger mt-3 mx-2" href="" data-bs-toggle="modal" data-bs-target="#modal">Supprimer mon compte</a>
+                </div>
+                {% endif %}
             </div>
         </div>
     </div>
@@ -59,10 +118,10 @@
                 <div class="modal-body">
                     <p class="text-center"><strong>Voulez-vous vraiment supprimer votre compte ?</strong></p>
                 </div>
-                <div class="modal-footer">
-                    <a href="{{ path('user.del') }}" type="button" class="btn btn-warning">Supprimer</a>
-                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Annuler</button>
-                </div>
+                    <div class="modal-footer">
+                        <a href="{{ path('user.del') }}" type="button" class="btn btn-warning">Supprimer</a>
+                        <button onclick="return confirm('Voulez vous vraiment supprimer le commentaire?')" type="button" class="btn btn-danger" data-bs-dismiss="modal">Annuler</button>
+                    </div>
             </div>
         </div>
     </div>
