--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -58,6 +58,13 @@
                         </li>
                     </ul>
                 </div>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('user.list') }}">
+                            Liste des utilisateurs
+                        </a>
+                    </li>
+                </ul>
             {% endif %}
             {% if currentUser is not null %}
                 <div class="dropdown ms-auto">
@@ -67,7 +74,7 @@
                             <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
                             <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
                         </svg>
-                        <span class="d-none d-sm-inline mx-1">{{ currentUser.email }}</span>
+                        <span class="d-none d-sm-inline mx-1">{{ currentUser.username }}</span>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdown2">
                         {% if currentUser.roles is same as (["ROLE_ADMIN","ROLE_USER"]) %}
@@ -78,7 +85,7 @@
                             </li>
                         {% endif %}
                         <li>
-                            <a class="dropdown-item" href="{{ path('user.index') }}">
+                            <a class="dropdown-item" href="{{ path('user.index', {id: currentUser.id}) }}">
                                 Mon profil
                             </a>
                         </li>
